Task 6: notify users about automatic server migration
