# artifacts/api-server/src/routes/index.ts
@@ -14,6 +14,7 @@ import extraSlotOrderRouter from "./extraSlotOrder";
 import extraTrafficOrderRouter from "./extraTrafficOrder";
 import balanceTopupOrderRouter from "./balanceTopupOrder";
 import supportRouter from "./support";
+import notificationsRouter from "./notifications";
 import adminRouter from "./admin";
 import yooMoneyRouter from "./yoomoney";
 import vpnNodeProvisioningRouter from "./admin/vpnNodeProvisioning";
@@ -35,6 +36,7 @@ router.use(extraSlotOrderRouter);
 router.use(extraTrafficOrderRouter);
 router.use(balanceTopupOrderRouter);
 router.use(supportRouter);
+router.use(notificationsRouter);
 router.use(adminRouter);
 router.use(yooMoneyRouter);
 router.use(vpnNodeProvisioningRouter);
